# opc

./: .gitignore  AGENTS.md  README.md  opc.py  pyproject.toml  requirements.txt
docs/: opc-platform-product-plan.md  org.md
docs/examples/: gzh-input.json
docs/plans/: gzh-curator_multi-account.plan.md
opc_platform/: __init__.py
opc_platform/commands/: __init__.py  decision_commands.py  graph_commands.py  opc_commands.py  publish_commands.py  run_commands.py  web_commands.py
opc_platform/contracts/: __init__.py  mappers.py  validators.py
opc_platform/domain/: __init__.py  engine.py  templates.py
opc_platform/entrypoints/: __init__.py  cli.py
opc_platform/observability/: __init__.py  diagnostics.py  events.py
opc_platform/runtime/: __init__.py  executor.py  node_runner.py
opc_platform/runtime/adapters/: __init__.py  cursor_cli.py  external_cmd.py  python_call.py
opc_platform/shared/: ids.py  io.py  slug.py  workspace.py
opc_platform/specs/: __init__.py  compiler.py  graph_edges.py  scenario_spec.py
opc_platform/templates/: __init__.py  gzh-curator-accounts.json  weekly-topic-batch.v2.json
org/: __init__.py  agent_spec.py  agent_task_graph.py  meta_agent.py
tests/: test_engine_benchmark.py  test_multi_account.py  test_mvp.py  test_spec_compiler.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json
web/src/: App.tsx  api.ts  styles.css  types.ts
